polished make files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,4 @@ project(xxteadec)
 add_library(xxtea xxtea.c xxtea.h)
 add_executable(xxteadec xxteadec.c)
 target_link_libraries(xxteadec PRIVATE xxtea)
+install(TARGETS xxteadec DESTINATION bin)
